--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -11,13 +11,13 @@
 <!-- 헤더 -->
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" th:href="@{/static}">내 블로그</a>
+        <a class="navbar-brand" th:href="@{/}">내 블로그</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" th:href="@{/static}">홈</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/}">홈</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/blog}">블로그</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/challenges}">코딩 챌린지</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/forum}">포럼</a></li>
