--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" th:href="@{/css/home.css}">
 </head>
 <body>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" th:href="@{/}">내 블로그</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" th:href="@{/}">홈</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/blog}">블로그</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/challenges}">코딩 챌린지</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/forum}">포럼</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/dashboard}">내 대시보드</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/login}">로그인</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
 <div th:replace="layout :: layout_content">
     <section>
         <div class="jumbotron">
@@ -21,31 +39,45 @@
 
     <!-- 추천 섹션 -->
     <div class="row">
+        <!-- 최신 블로그 글 -->
         <div class="col-md-4">
             <h2>최신 블로그 글</h2>
             <ul>
-                <li><a th:href="@{/blog/post1}">Spring Boot 이해하기</a></li>
-                <li><a th:href="@{/blog/post2}">REST API 소개</a></li>
-                <li><a th:href="@{/blog/post3}">Spring에서 WebSocket 사용하기</a></li>
+                <li th:each="post : ${latestPosts}">
+                    <a th:href="@{/blog/{id}(id=${post.id})}" th:text="${post.title}">블로그 글 제목</a>
+                </li>
             </ul>
         </div>
+
+        <!-- 인기 코딩 챌린지 -->
         <div class="col-md-4">
             <h2>인기 코딩 챌린지</h2>
             <ul>
-                <li><a th:href="@{/challenges/challenge1}">FizzBuzz 챌린지</a></li>
-                <li><a th:href="@{/challenges/challenge2}">회문 검사기</a></li>
-                <li><a th:href="@{/challenges/challenge3}">정렬 알고리즘</a></li>
+                <li th:each="challenge : ${popularChallenges}">
+                    <a th:href="@{/challenges/{id}(id=${challenge.id})}" th:text="${challenge.title}">코딩 챌린지 제목</a>
+                </li>
             </ul>
         </div>
+
+        <!-- 활발한 포럼 주제 -->
         <div class="col-md-4">
             <h2>활발한 포럼 주제</h2>
             <ul>
-                <li><a th:href="@{/forum/topic1}">REST API의 모범 사례</a></li>
-                <li><a th:href="@{/forum/topic2}">자바 vs. 코틀린</a></li>
-                <li><a th:href="@{/forum/topic3}">WebSocket 활용 사례</a></li>
+                <li th:each="topic : ${activeTopics}">
+                    <a th:href="@{/forum/{id}(id=${topic.id})}" th:text="${topic.title}">포럼 주제 제목</a>
+                </li>
             </ul>
         </div>
     </div>
 </div>
+<!-- 푸터 -->
+<footer class="footer bg-light py-3 mt-5">
+    <div class="container">
+        <span class="text-muted">© 2024 내 블로그</span>
+    </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
