--- a/src/main/resources/templates/html/dashboard.html
+++ b/src/main/resources/templates/html/dashboard.html
@@ -1,30 +1,39 @@
-{% extends 'layout.html' %}
-
-{% block content %}
-<h1>내 대시보드</h1>
-<div class="row">
-    <div class="col-md-4">
-        <h3>내 프로필</h3>
-        <p>이름: {{ user.name }}</p>
-        <p>이메일: {{ user.email }}</p>
-        <a href="/dashboard/edit-profile" class="btn btn-secondary">프로필 수정</a>
-    </div>
-    <div class="col-md-4">
-        <h3>내 블로그 글</h3>
-        <ul>
-            {% for post in user.posts %}
-            <li><a href="/blog/{{ post.id }}">{{ post.title }}</a></li>
-            {% endfor %}
-        </ul>
-        <a href="/blog/new" class="btn btn-primary">새 글 작성</a>
-    </div>
-    <div class="col-md-4">
-        <h3>내 코딩 챌린지</h3>
-        <ul>
-            {% for challenge in user.challenges %}
-            <li><a href="/challenges/{{ challenge.id }}">{{ challenge.title }}</a> - {{ challenge.status }}</li>
-            {% endfor %}
-        </ul>
+<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="${title}">내 대시보드</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+</head>
+<body>
+<div th:replace="layout :: layout_content">
+    <h1>내 대시보드</h1>
+    <div class="row">
+        <div class="col-md-4">
+            <h3>내 프로필</h3>
+            <p>이름: <span th:text="${user.name}">이름</span></p>
+            <p>이메일: <span th:text="${user.email}">이메일</span></p>
+            <a th:href="@{/dashboard/edit-profile}" class="btn btn-secondary">프로필 수정</a>
+        </div>
+        <div class="col-md-4">
+            <h3>내 블로그 글</h3>
+            <ul>
+                <li th:each="post : ${user.posts}">
+                    <a th:href="@{/blog/{id}(id=${post.id})}" th:text="${post.title}">블로그 글 제목</a>
+                </li>
+            </ul>
+            <a th:href="@{/blog/new}" class="btn btn-primary">새 글 작성</a>
+        </div>
+        <div class="col-md-4">
+            <h3>내 코딩 챌린지</h3>
+            <ul>
+                <li th:each="challenge : ${user.challenges}">
+                    <a th:href="@{/challenges/{id}(id=${challenge.id})}" th:text="${challenge.title}">챌린지 제목</a> - <span th:text="${challenge.status}">상태</span>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
-{% endblock %}
+</body>
+</html>
