--- a/src/main/resources/templates/html/signup.html
+++ b/src/main/resources/templates/html/signup.html
@@ -1,21 +1,30 @@
-{% extends 'layout.html' %}
-
-{% block content %}
-<h1>회원가입</h1>
-<form method="post" action="/signup">
-    <div class="form-group">
-        <label for="name">이름</label>
-        <input type="text" id="name" name="name" class="form-control" required>
-    </div>
-    <div class="form-group">
-        <label for="email">이메일</label>
-        <input type="email" id="email" name="email" class="form-control" required>
-    </div>
-    <div class="form-group">
-        <label for="password">비밀번호</label>
-        <input type="password" id="password" name="password" class="form-control" required>
-    </div>
-    <button type="submit" class="btn btn-primary">회원가입</button>
-</form>
-<p class="mt-3">이미 계정이 있으신가요? <a href="/login">로그인</a></p>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="${title}">회원가입</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+</head>
+<body>
+<div th:replace="layout :: layout_content">
+    <h1>회원가입</h1>
+    <form method="post" th:action="@{/signup}">
+        <div class="form-group">
+            <label for="name">이름</label>
+            <input type="text" id="name" name="name" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="email">이메일</label>
+            <input type="email" id="email" name="email" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" name="password" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">회원가입</button>
+    </form>
+    <p class="mt-3">이미 계정이 있으신가요? <a th:href="@{/login}">로그인</a></p>
+</div>
+</body>
+</html>
